# dazzle

./: .copilot.json  .coverage  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .python-version  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  EVALUATION.md  GETTING_STARTED.md  HOMEBREW_QUICKSTART.md  MANIFEST.in  Makefile  NEXT_STEPS.md  Procfile  README.md  ROADMAP.md  SECURITY.md  SECURITY_CLAIMS.md  TESTING_GUIDE.md  TEST_DSL_SPECIFICATION.md  codecov.yml  commit-all-work.sh  eslint.config.js  eslint.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  test_mcp_enhancements.py  vitest.config.js
.claude/: CLAUDE.md  settings.json
.claude/commands/: bump.md  check.md  cimonitor.md  docs-update.md  fuzz.md  glitch.md  improve.md  issues.md  ship.md  smells.md  trial-cycle.md  ux-converge.md  ux-cycle.md  xproject.md
.claude/hooks/: README.md  _hook_io.py  bash_validator.py  code_formatter.py  compact_context.py  dsl_validator.py  file_protection.py  run_hook.sh  session_cleanup.sh  session_start.sh  smart_stop.py  stop_lint.py  subagent_context.py  subagent_stop.py  worktree_setup.sh
.claude/skills/: deployment.md  dsl-patterns.md  process-schema.md
.claude/workflows/: fuzz.js  smells.js  xproject.js
.dazzle/: data.db
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deferred_decision.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/rulesets/: README.md  branch-protection.json  copilot-review.json
.github/workflows/: ai-coauthor-check.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  coverage-nightly.yml  docs.yml  fuzz-nightly.yml  hm-update-visual-baselines.yml  issue-quality-check.yml  mutation-nightly.yml  pra.yml  prune-old-releases.yml  publish-pypi.yml  release-cli.yml  sync-hatchi-maxchi.yml  tigerbeetle.yml  update-vendors.yml  ux-coverage.yml  vscode-extension.yml
agent/: smells-log.md  smells-report.md  xproject-report.md
benchmarks/: README.md  __init__.py  indexes.sql  measure.py  run.py  seed.py
benchmarks/results/: results.json  results.md
cli/: package.json
cli/src/: cli.ts  index.ts
dev_docs/: BUG_FIXES_CONSOLIDATED_SUMMARY.md  CRITICAL_BUGS_FIXED_SUMMARY.md  CRITICAL_BUGS_FIX_PLAN.md  DEVELOPMENT_HISTORY.md  DNR-Back-GraphQL-Spec-v1.md  DNR-SeparationOfConcerns-v1.md  DNR-Theming-Spec-v1.md  DNR-WebRuntime-Spec-v1.md  FRONTEND_ARCHITECTURE_ANALYSIS.md  NEXT_STAGES_SPEC.md  README.md  VSCODE_EXTENSION.md  ci_e2e_testing_strategy.md  comprehensive_feedback_integration_plan.md  dazzle_ui_design_brief_v1.md  docs_consolidation_summary.md  dual_version_workflow.md  evaluation_separation_of_concerns.md  example_command_enhancement.md  express_micro_template_bug_fix.md  framework-maturity-2026-04-15.md  frontier-agent-briefing-v0.55.47.md  gap_analysis_2025_11_23.md  getting_started_evaluation.md  init_command_implementation_summary.md  init_command_ux_improvement.md  mcp_distribution_strategy.md  mcp_server_implementation.md  mcp_v0_2_implementation_summary.md  model-driven-failure-modes.md  nextjs_onebox_fixes_plan.md  openapi_backend_analysis.md  release_v0_1_1_summary.md  roadmap_consolidation_summary.md  roadmap_v0_2_0.md  roadmap_v0_2_0_evaluation.md  roadmap_v0_3_0.md  roadmap_v0_3_0_phase5.md  roadmap_v0_4_0_dnr.md  session_summary_2025_11_25.md  (+12 more)
dev_docs/Dazzle_Native_Runtime/: ARCHITECTURE.md  DNR-Components-v1.md  DNR-Implementation-Plan-v1.md  DNR-MCP-Spec-v1.md  DNR-Mobile-Spec-v1.md  DNR-Spec-v1.md  STAGE-1-COMPLETE.md  file_upload_architecture.md  multi_tenant_architecture.md  (+2 more)
docs/: ARCHETYPE_SELECTION.md  AUTHENTICATION.md  BACKEND_ARCHITECTURE.md  CAPABILITIES.md  CAPABILITIES_MATRIX.md  CLI_REFERENCE.md  CSS_MIGRATION_GUIDE.md  CUSTOM_STACKS.md  DAZZLE_DSL_QUICK_REFERENCE.md  DAZZLE_DSL_REFERENCE_0_1.md  DAZZLE_IR_0_1.md  DEPRECATION_POLICY.md  DOCUMENTATION_INDEX.md  DSL_RESERVED_KEYWORDS.md  E2E_TESTING.md  EXAMPLES.md  EXTENSIBILITY.md  IDE_INTEGRATION.md  INSTALLATION.md  MCP_INTEGRATION.md  MCP_SERVER.md  MCP_V0_2_ENHANCEMENTS.md  MODULAR_PROGRESS.md  PHILOSOPHY.md  README.md  SECOND_SESSION_SUMMARY.md  SEMANTIC_DOM_CONTRACT.md  STAGE_SELECTION.md  TOOLING.md  TROUBLESHOOTING.md  UX_Semantic_Layer_Extension_Specification.md  VSCODE_EXTENSION.md  autonomous-harness.md  index.md  llms-full.txt  llms.txt  migration-findings.md  philosophy.md  python-3.14-primary-target.md  typed-fragment-pilot-guide.md  (+2 more)
examples/: README.md
extensions/: README.md
hatchi-maxchi/: hatchi-maxchi.css
homebrew/: dazzle-simple.rb  dazzle.rb
improve/: improve-policy.yaml
scripts/: bench_interp.py  build_dist.py  bump-version.py  ci_changed.py  ci_local.sh  css_clip_check.py  css_raw_ramp_check.py  demo_fleet_bar.py  example_agent_prove.sh  example_hm_surface_audit.py  example_journey_maturity.py  example_product_maturity.py  flip_to_fragment.py  gen_design_context.py  gen_reference_docs.py  gen_ux_catalogue.py  generate-homebrew-resources.py  generate_example_screenshots.py  hm_coherence_queue.py  hm_css_classify.py  hm_gallery_probes.py  hm_pages_vision.py  hm_standalone_ci_status.py  hm_subscription_vision.py  hm_tailwind_reservoir.py  hm_visual_smoke.py  import-rulesets.sh  improve_compact.py  improve_dig_receipt.py  improve_example_probes.py  improve_github_inbox.py  improve_policy.py  improve_schedule_next.py  improve_watchdog_prompt.md  mcp_reload.py  mutation_poc.py  perf_profile_workspace.py  post_install.py  preflight_surface.py  prepare-release.sh  (+21 more)
stems/: INDEX.md  README.md  agent-first.md  authoring-boundary.md  clean-breaks.md  dsl-first.md  epistemic-layout.md  four-layer-stack.md  hypermedia-ssr.md  rbac-and-scope.md
tests/: README.md  _pg_worker_db.py  conftest.py  test_mcp_integration.py
tools/: gen_reference_docs.py  reference_docs.config.json
tools/pygments-dazzle/: pyproject.toml
tools/pygments-dazzle/pygments_dazzle/: __init__.py
(+6399 files in other folders)
